Removed aside on CV.

--- a/cv/index.html
+++ b/cv/index.html
@@ -34,6 +34,7 @@
       </nav>
         <section id="save">
             <section class="sheet">
+<!--
                 <aside>
                     <section class="contact">
                         <h4>Contact</h4>
@@ -91,6 +92,8 @@ href="https://github.com/dsondak">github.com/dsondak</a></span>
                     <section class="skills">
                     </section>
                 </aside>
+--> 
+<!-- Commenting out the aside :( -->
                 <section>
                     <header class="name" aria-label="David Sondak">
                         <a href="https://dsondak.github.io" style="display:inline-block";>
@@ -109,6 +112,74 @@ font-family="MHelvetica, Arial, Sans-Serif" font-size="64" font-weight="normal">
                                 <button class="cvbutton"> Download CV </button>
                         </a>
                     </header>
+
+                        <button class="collapsible">Contact Information</button>
+                        <div class="content">
+                              <ul>
+                                  <li>
+                                      <span><i class="fa fa-map-marker-alt" title="Location"></i> <a
+      href="https://goo.gl/maps/RYDWryHmctRp1RQ6A">Maxwell-Dworkin G111</a></span>
+                                  </li>
+                                  <li>
+                                      <span><i class="fa fa-envelope" title="Email"></i> <a href="mailto:dsondak@gmail.com">dsondak
+      (at) gmail.com</a></span>
+                                  </li>
+                                  <li>
+                                      <span><i class="fa fa-globe-americas" title="Website"></i> <a
+      href="https://dsondak.github.io">dsondak.github.io</a></span>
+                                  </li>
+                                  <li>
+                                      <span><i class="fab fa-github" title="GitHub"></i> <a
+      href="https://github.com/dsondak">github.com/dsondak</a></span>
+                                  </li>
+                              </ul>
+                        </div>
+
+                        <button class="collapsible">Research Interests</button>
+                        <div class="content">
+                          <section class="skills">
+                              <ul>
+                                  <li><span>Physics-based machine learning</span></li>
+                                  <li><span>Fluid mechanics</span></li>
+                                  <li><span>Thermal convection</span></li>
+                                  <li><span>Magnetohydrodynamics</span></li>
+                                  <li><span>Scientific software development</span></li>
+                                  <li><span>Data-driven modeling</span></li>
+                              </ul>
+                          </section>
+                        </div>
+
+                        <button class="collapsible">Software</button>
+                        <div class="content">
+                          <section class="skills">
+                              <ul>
+                                  <li><span>Python</span></li>
+                                  <li><span>Scientific Python</span></li>
+                                  <li><span>Git</span></li>
+                                  <li><span>C++</span></li>
+                                  <li><span>MPI</span></li>
+                                  <li><span>OpenMP</span></li>
+                                  <li><span>Pytorch</span></li>
+                                  <li><span>Keras</span></li>
+                                  <li><span>Matlab</span></li>
+                                  <li><span>Modern Fortran</span></li>
+                                  <li><span>Bash</span></li>
+                                  <li><span>HTML / CSS</span></li>
+                                  <li><span>Latex</span></li>
+                              </ul>
+                          </section>
+                        </div>
+
+                        <button class="collapsible">Societies</button>
+                        <div class="content">
+                          <section class="skills">
+                              <ul>
+                                  <li><span>Society of Industrial and Applied Mathematics</span></li>
+                                  <li><span>American Physical Society</span></li>
+                                  <li><span>American Institute of Aeronautics and Astronautics</span></li>
+                              </ul>
+                          </section>
+                        </div>
 
                         <button class="collapsible">Education</button>
                         <div class="content">
