Publications in progress.

--- a/_sections/publications.html
+++ b/_sections/publications.html
@@ -6,6 +6,12 @@ order: 4
 
 <h3>  In Preparation </h3>
 <ol reversed>
+
+   <li>
+    High Rayleigh number variational multiscale large eddy simulations of Rayleigh-Bénard Convection, D. Sondak, T.M.Smith,
+S.Conde, R.Pawlowski, J.N.Shadid, submitted to Mechanics Research Communications
+   </li>
+
    <li>
     Physical Symmetries Embedded in Neural Networks, M. Mattheakis, P. Protopapas, D. Sondak, M. Di Giovanni,
    E. Kaxiras, arXiv:1904.08991, 2019
@@ -16,8 +22,21 @@ order: 4
    </li>
 
    <li>
-    High Rayleigh number variational multiscale large eddy simulations of Rayleigh-Bénard Convection, D. Sondak, T.M.Smith,
-S.Conde, R.Pawlowski, J.N.Shadid, submitted to Mechanics Research Communications
+    Convergence properties of neural networks for solving differential equations, M.DiGiovanni, D. Sondak, P.Protopapas,
+M.Mattheakis
+   </li>
+
+   <li>
+    Solving differential equations using neural network solution bundles, C.Flamant, P.Protopapas, D. Sondak
+   </li>
+
+   <li>
+    Unsupervised learning of solution to differential equations with generative adversarial networks, D.Randle, P.Protopapas, D. Sondak
+   </li>
+
+   <li>
+    Uncertainty quantification of neural network-based Reynolds averaged Navier Stokes models, X.Zhou, D.Sondak, C.Garraffo,
+P.Protopapas
    </li>
 
 </ol>
