Updating course numbers in bold.

--- a/_sections/teaching.html
+++ b/_sections/teaching.html
@@ -5,13 +5,13 @@ order: 4
 ---
 
 <h3> Harvard </h3>
-  CS107/AC207: Systems Development for Computational Science --- Fall 2017, 2018, 2019, 2020 <br>
-  ES123: Introduction to Fluid Mechanics and Transport Processes --- Spring 2020 <br>
-  CS205: Computing Foundations of Computational Science --- Spring 2018, 2020 <br>
-  AC290: Extreme Computing --- Spring 2019 <br>
-  AC297r: Computational Science and Engineering Capstone --- Spring 2019
+  <b>CS107/AC207</b>: Systems Development for Computational Science --- Fall 2017, 2018, 2019, 2020 <br>
+  <b>ES123</b>: Introduction to Fluid Mechanics and Transport Processes --- Spring 2020 <br>
+  <b>CS205</b>: Computing Foundations of Computational Science --- Spring 2018, 2020 <br>
+  <b>AC290</b>: Extreme Computing --- Spring 2019 <br>
+  <b>AC297r</b>: Computational Science and Engineering Capstone --- Spring 2019
 
 <h3> University of Wisconsin - Madison </h3>
-  MATH 322: Applied Mathematical Analysis 2 --- Fall 2014, 2015 <br>
-  MATH 320: Linear Algebra and Differential Equations --- Fall 2013, Spring 2015 <br>
-  MATH 222: Calculus and Analytic Geometry 2 --- Spring 2014
+  <b>MATH 322</b>: Applied Mathematical Analysis 2 --- Fall 2014, 2015 <br>
+  <b>MATH 320</b>: Linear Algebra and Differential Equations --- Fall 2013, Spring 2015 <br>
+  <b>MATH 222</b>: Calculus and Analytic Geometry 2 --- Spring 2014
