Left align homepage.

--- a/_sections/about_me.html
+++ b/_sections/about_me.html
@@ -7,7 +7,7 @@ order: 3
 <!--<a href="#" class="image featured"><img src="assets/imgs/david_percy.jpg" alt="" /></a>-->
 <img src="assets/imgs/david_percy.jpg" alt="" style="width:384px;height:384px;"/>
 
-<p>
+<p style="text-align: left">
 I am a Lecturer in the Institute for Applied Computational Science (IACS) at Harvard University where I conduct research and
 teach classes. My research is at the intersection of applied mathematics, physics, and machine learning with an emphasis on
 fluid mechanics and multiscale phenomena. At IACS, I teach classes on basic software principles (CS207), high performance
