--- a/_sections/research.html
+++ b/_sections/research.html
@@ -7,7 +7,7 @@ order: 3
 <h2> Multiscale Physical Systems </h2>
 
 <img src="assets/imgs/T_Ra1T.png" alt="drawing" style="width=512px;height=256px;"/> <br>
-<p> Multiscale phenomena are common in everyday life and engineering systems.  Fluid systems in particular exhibit multiple
+<p style="text-align: left"> Multiscale phenomena are common in everyday life and engineering systems.  Fluid systems in particular exhibit multiple
 spatial and temporal scales.  The quintessential example of a multiscale phenomenon in fluid mechanics is turbulence --- the
 disordered, seemingly random, motion of a fast-moving fluid.  Much of my research in this area has focused on developing
 turbulence models for a variety of fluid systems including Rayleigh-Benard convection and magnetohydrodynamics.  I have also
@@ -18,7 +18,7 @@ research is to apply and extend these models to complex physical systems includi
 magnetoconvection). </p>
 
 <h3> Relevant publications </h3>
-<ol reversed>
+<ol reversed style="text-align: left">
    <li>
       The effect of Prandtl number on optimal scaling laws in Rayleigh-Bénard convection, D.Sondak, F.Waleffe,
    L.M.Smith, Journal of Fluid Mechanics, 784, 565-595, 2015
@@ -44,7 +44,7 @@ magnetoconvection). </p>
 
 <h2> Data-Driven Modeling and Machine Learning </h2>
 <img src="assets/imgs/Active_z.png" alt="drawing" style="width:600px;height:384px;"/> <br>
-<p>
+<p style="text-align: left">
 At the heart of research in multiscale phenomena and fluid mechanics is the desire to find reliable, reduced models that can
 be used to make predictions of scientific and engineering interest.  New statistical algorithms emerging from the machine
 learning community provide a new perspective on developing turbulence models.  Developing new machine learning models
@@ -55,7 +55,7 @@ algorithms.
 </p>
 
 <h3> Relevant publications </h3>
-<ol reversed>
+<ol reversed style="text-align: left">
   <li>
     Finding Multiple Solutions of ODEs with Neural Networks, M.Di Giovanni, D.Sondak, P.Protopapas, M.Brambilla, Association
 for the Advancement of Artificial Intelligence Symposium on Machine Learning with Physics Sciences, 2020
@@ -77,13 +77,13 @@ P.Protopapas, S.Succi, Journal of Turbulence, 1-19, 2019, doi: 10.1080/14685248.
 
 <h2> Other Projects and Collaborations </h2>
 <img src="assets/imgs/figs_U_mixedbc.jpg" alt="drawing" style="width:600px;height:384px;"/> <br>
-<p>
+<p style="text-align: left">
 I genuinly enjoy collaborating with researchers from outside my traditional field of expertise.  It is a fun challenge to
 bring my domain knowledge to bear on interesting research areas to see what new things can be uncovered together.
 </p>
 
 </h3> Relevant publications </h3>
-<ol reversed>
+<ol reversed style="text-align: left">
    <li>
       Can phoretic particles swim in two dimensions?, D.Sondak, C.Hawley, S.Heng, R.Vinsonhaler, E.Lauga, J.-L.
    Thiffeault, Physical Review E, 94, 062606, 2016
