--- a/_sections/publications.html
+++ b/_sections/publications.html
@@ -5,8 +5,7 @@ order: 5
 ---
 
 <h3>  In Preparation </h3>
-<ol reversed>
-
+<ol reversed style="text-align: left">
    <li>
     High Rayleigh number variational multiscale large eddy simulations of Rayleigh-Bénard Convection, D. Sondak, T.M.Smith,
 S.Conde, R.Pawlowski, J.N.Shadid, submitted to Mechanics Research Communications
@@ -42,7 +41,7 @@ P.Protopapas
 </ol>
 
 <h3> Journal Papers </h3>
-<ol reversed>
+<ol reversed style="text-align: left">
    <li>
     NeuroDiffEq: A Python package for solving differential equations with neural networks, F.Chen, D.Sondak, P.Protopapas,
 M.Mattheakis, S.Liu, D.Agarwal, M.DiGiovanni, Journal of Open Source Software, 5(46), 1931, 2020
@@ -89,7 +88,7 @@ P.Protopapas, S.Succi, Journal of Turbulence, 1-19, 2019, doi: 10.1080/14685248.
 </ol>
 
 <h3> Peer-reviewed Conference Proceedings </h3>
-<ol reversed>
+<ol reversed style="text-align: left">
   <li>
     Finding Multiple Solutions of ODEs with Neural Networks, M.Di Giovanni, D.Sondak, P.Protopapas, M.Brambilla, Association
 for the Advancement of Artificial Intelligence Symposium on Machine Learning with Physics Sciences, 2020
