Moving MRC pub. to main publications.

--- a/_sections/publications.html
+++ b/_sections/publications.html
@@ -7,11 +7,6 @@ order: 5
 <h3>  In Preparation </h3>
 <ol reversed style="text-align: left">
    <li>
-    High Rayleigh number variational multiscale large eddy simulations of Rayleigh-Bénard Convection, D. Sondak, T.M.Smith,
-S.Conde, R.Pawlowski, J.N.Shadid, submitted to Mechanics Research Communications
-   </li>
-
-   <li>
     Physical Symmetries Embedded in Neural Networks, M. Mattheakis, P. Protopapas, D. Sondak, M. Di Giovanni,
    E. Kaxiras, arXiv:1904.08991, 2019
    </li>
@@ -42,6 +37,10 @@ P.Protopapas
 
 <h3> Journal Papers </h3>
 <ol reversed style="text-align: left">
+   <li>
+    High Rayleigh number variational multiscale large eddy simulations of Rayleigh-Bénard Convection, D. Sondak, T.M.Smith,
+S.Conde, R.Pawlowski, J.N.Shadid, Mechanics Research Communications, (2020), https://doi.org/10.1016/j.mechrescom.2020.103614
+   </li>
    <li>
     NeuroDiffEq: A Python package for solving differential equations with neural networks, F.Chen, D.Sondak, P.Protopapas,
 M.Mattheakis, S.Liu, D.Agarwal, M.DiGiovanni, Journal of Open Source Software, 5(46), 1931, 2020
