--- a/_sections/research.html
+++ b/_sections/research.html
@@ -10,8 +10,8 @@ order: 3
 <p style="text-align: left"> Multiscale phenomena are common in everyday life and engineering systems.  Fluid systems in particular exhibit multiple
 spatial and temporal scales.  The quintessential example of a multiscale phenomenon in fluid mechanics is turbulence --- the
 disordered, seemingly random, motion of a fast-moving fluid.  Much of my research in this area has focused on developing
-turbulence models for a variety of fluid systems including Rayleigh-Benard convection and magnetohydrodynamics.  I have also
-found exact coherent structures in Rayleigh-Benard convection that optimize heat transport and provide an upper bound on the
+turbulence models for a variety of fluid systems including Rayleigh-B&eacute; convection and magnetohydrodynamics.  I have also
+found exact coherent structures in Rayleigh-B&eacute; convection that optimize heat transport and provide an upper bound on the
 actual turbulent heat transport.  Ongoing research aims to find the signature of these optimal solutions in actual turbulent
 flows.  The emerging field of machine learning is a good candidate to search for such solutions.  An aim of my future
 research is to apply and extend these models to complex physical systems including geophysical flows (e.g.
@@ -20,12 +20,21 @@ magnetoconvection). </p>
 <h3> Relevant publications </h3>
 <ol reversed style="text-align: left">
    <li>
-      The effect of Prandtl number on optimal scaling laws in Rayleigh-Bénard convection, D.Sondak, F.Waleffe,
+      Coherent Solutions and Transition to Turbulence in Two-Dimensional Rayleigh-B&eacute;nard Convection, P. Kooloth, <b>D.Sondak</b>,
+   L.M.Smith, Physical Review Fluids: To appear, 2020 
+   </li>
+   <li>
+      High Rayleigh number variational multiscale large eddy simulations of Rayleigh-B&eacute;nard Convection, <b>D.Sondak</b>,
+T.M.Smith, R.P.Pawlowski, S.Conde, J.N.Shadid, Mechanics Research Communications, 2020, <a
+href="https://doi.org/10.1016/j.mechrescom.2020.103614">https://doi.org/10.1016/j.mechrescom.2020.103614</a> 
+   </li>
+   <li>
+      The effect of Prandtl number on optimal scaling laws in Rayleigh-B&eacute;nard convection, <b>D.Sondak</b>, F.Waleffe,
    L.M.Smith, Journal of Fluid Mechanics, 784, 565-595, 2015
    </li>
    <li>
       A new class of finite element variational multiscale turbulence models for incompressible magnetohydrodynamics,
-   D.Sondak, J.N.Shadid, A.A.Oberai, R.P.Pawlowski, E.C.Cyr, T.M.Smith, Journal of Computational Physics,
+   <b>D.Sondak</b>, J.N.Shadid, A.A.Oberai, R.P.Pawlowski, E.C.Cyr, T.M.Smith, Journal of Computational Physics,
    295, 596-616, 2015
    </li>
    <li>
@@ -57,19 +66,19 @@ algorithms.
 <h3> Relevant publications </h3>
 <ol reversed style="text-align: left">
   <li>
-    Finding Multiple Solutions of ODEs with Neural Networks, M.Di Giovanni, D.Sondak, P.Protopapas, M.Brambilla, Association
+    Finding Multiple Solutions of ODEs with Neural Networks, M.Di Giovanni, <b>D.Sondak</b>, P.Protopapas, M.Brambilla, Association
 for the Advancement of Artificial Intelligence Symposium on Machine Learning with Physics Sciences, 2020
   </li>
    <li>
-    Neural Network Models for the Anisotropic Reynolds Stress Tensor in Turbulent Channel Flow, R.Fang, D.Sondak,
+    Neural Network Models for the Anisotropic Reynolds Stress Tensor in Turbulent Channel Flow, R.Fang, <b>D.Sondak</b>,
 P.Protopapas, S.Succi, Journal of Turbulence, 1-19, 2019, doi: 10.1080/14685248.2019.1706742 
    </li>
    <li>
-   Physical Symmetries Embedded in Neural Networks, M. Mattheakis, P. Protopapas, D. Sondak, M. Di Giovanni,
+   Physical Symmetries Embedded in Neural Networks, M. Mattheakis, P. Protopapas, <b>D.Sondak</b>, M. Di Giovanni,
    E. Kaxiras, arXiv:1904.08991, 2019
    </li>
    <li>
-   An Inadequacy Formulation for an Uncertain Flamelet Model, D.Sondak, T.Oliver, C.Simmons,
+   An Inadequacy Formulation for an Uncertain Flamelet Model, <b>D.Sondak</b>, T.Oliver, C.Simmons,
    R.D.Moser, 19th AIAA Non-Deterministic Approaches Conference, 2017
    </li>
 </ol>
@@ -85,12 +94,12 @@ bring my domain knowledge to bear on interesting research areas to see what new 
 </h3> Relevant publications </h3>
 <ol reversed style="text-align: left">
    <li>
-      Can phoretic particles swim in two dimensions?, D.Sondak, C.Hawley, S.Heng, R.Vinsonhaler, E.Lauga, J.-L.
+      Can phoretic particles swim in two dimensions?, <b>D.Sondak</b>, C.Hawley, S.Heng, R.Vinsonhaler, E.Lauga, J.-L.
    Thiffeault, Physical Review E, 94, 062606, 2016
    </li>
    <li>
       Remediation of time-delay effects in tokamak axisymmetric control loops by optimal tuning and robust predictor
-   augmentation, D. Sondak, R.Arastoo, E. Schuster, M.L.Walker, Fusion Engineering and Design, 86(6), 1112–1115,
+   augmentation, <b>D.Sondak</b>, R.Arastoo, E. Schuster, M.L.Walker, Fusion Engineering and Design, 86(6), 1112–1115,
    2011.
    </li>
    <li>
