Updating journal publications in CV.

--- a/_experiences/publications.html
+++ b/_experiences/publications.html
@@ -8,17 +8,13 @@ order: 4
 <ol reversed>
 
    <li>
-    High Rayleigh number variational multiscale large eddy simulations of Rayleigh-Bénard Convection, D. Sondak, T.M.Smith,
-S.Conde, R.Pawlowski, J.N.Shadid, submitted to Mechanics Research Communications
+      Learning a Reduced Basis of Dynamical Systems using an Autoencoder, <b>D.Sondak</b>, P.Protopapas, Submitted to
+Physical Review E, arXiv:2011.07346 
    </li>
 
    <li>
     Physical Symmetries Embedded in Neural Networks, M. Mattheakis, P. Protopapas, D. Sondak, M. Di Giovanni,
    E. Kaxiras, arXiv:1904.08991, 2019
-   </li>
-
-   <li>
-    Optimal Heat-Transport Solutions and Transition to Turbulence in Two-Dimensional Rayleigh-Benard Convection, P. Kooloth, D. Sondak, L.M.Smith
    </li>
 
    <li>
@@ -43,6 +39,15 @@ P.Protopapas
 
 <h3> Journal Papers </h3>
 <ol reversed>
+   <li>
+      Coherent Solutions and Transition to Turbulence in Two-Dimensional Rayleigh-B&eacute;nard Convection, P. Kooloth, <b>D.Sondak</b>,
+   L.M.Smith, Physical Review Fluids: To appear, 2020 
+   </li>
+   <li>
+      High Rayleigh number variational multiscale large eddy simulations of Rayleigh-B&eacute;nard Convection, <b>D.Sondak</b>,
+T.M.Smith, R.P.Pawlowski, S.Conde, J.N.Shadid, Mechanics Research Communications, 2020, <a
+href="https://doi.org/10.1016/j.mechrescom.2020.103614">https://doi.org/10.1016/j.mechrescom.2020.103614</a> 
+   </li>
    <li>
     NeuroDiffEq: A Python package for solving differential equations with neural networks, F.Chen, D.Sondak, P.Protopapas,
 M.Mattheakis, S.Liu, D.Agarwal, M.DiGiovanni, Journal of Open Source Software, 5(46), 1931, 2020
