SIAM invited talk in CV.

--- a/_experiences/talks.html
+++ b/_experiences/talks.html
@@ -6,6 +6,10 @@ order: 5
 
 <ol reversed>
    <li>
+     An Autoencoder for Learning Reduced Dynamics of the Kuramoto-Sivashinsky Equation, SIAM Mathematics of Data Science:
+Special session on "Bridging Data Assimilation with Data-Drive Analysis", Virtual Meeting, June 29, 2020
+   </li>
+   <li>
      Machine Learning in Chaotic and Turbulent Systems, Universality: Turbulence Across Vast Scales, Flatiron Institute, New
 York, New York, December 2, 2019
    </li>
