Finally updated web CV w/ teaching experience

--- a/_experiences/teaching.html
+++ b/_experiences/teaching.html
@@ -3,3 +3,159 @@ title: Teaching Experience
 icon: fa-chalkboard-teacher
 order: 7
 ---
+
+<!-- Harvard -->
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                  <h3>Harvard University</h3>
+                  Lecturer on Computational Science
+	</div>
+	<div class="6u12u(small)">
+                 Cambridge, MA USA
+                 <br>
+                 July 2017 - Present
+	</div>
+</div>
+
+<br>
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                 CS207 / CS107 / AC207 - Systems Development for Computational Science 
+	</div>
+	<div class="6u12u(small)">
+                 Fall 2017 - 2020 
+	</div>
+<ul>
+  <li> Computer science course on software development for computational scientists </li>
+  <li> Grew enrollment from 45 students (Fall 2017) to 130 students (Fall 2019 and beyond) </li>
+  <li> Supervised and managed up to 10 teaching fellows and course assistant </li>
+</ul>
+</div>
+
+<br>
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                 ES123 - Introduction to Fluid Mechanics and Transport Processes
+	</div>
+	<div class="6u12u(small)">
+                 Fall 2020
+	</div>
+<br>
+<ul>
+  <li> Undergraduate fluid mechanics course </li>
+  <li> Supervised and managed 6 teaching fellows </li>
+</ul>
+</div>
+
+<br>
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                 CS205 - Computing Foundations for Computational Science
+	</div>
+	<div class="6u12u(small)">
+                 Spring 2018, 2020, 2021
+	</div>
+<ul>
+  <li> Graduate course on parallel and high performance computing </li>
+  <li> Approximately 100 students </li>
+  <li> Supervised and managed 5 teaching fellows </li>
+</ul>
+</div>
+
+<br>
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                 AC297r - Computational Science and Engineering Capstone Project
+	</div>
+	<div class="6u12u(small)">
+                 Spring 2019
+	</div>
+<ul>
+  <li> Recruited four project partners to propose real-world problems for students to solve </li>
+  <li> Students work in teams of 3-4 members to address challenges posed by industry and academic partners </li>
+  <li> Students present results at end-of-semester poster session open to partners </li>
+</ul>
+</div>
+
+<br>
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                 AC290r - Extreme Computing
+	</div>
+	<div class="6u12u(small)">
+                 Spring 2019
+	</div>
+<ul>
+  <li> Project-based course to explore the techniques, infrastructure, and algorithms used for extreme computing </li>
+  <li> Students use tools developed at national labs and academia to perform large-scale simulations </li>
+</ul>
+</div>
+
+<!-- UW-Madison -->
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                  <h3>University of Wisconsin-Madison</h3>
+                  Visiting Assistant Professor / Postdoctoral Researcher
+	</div>
+	<div class="6u12u(small)">
+                 Madison, WI USA
+                 <br>
+                 August 2013 - January 2016
+	</div>
+</div>
+
+<br>
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                 MATH 322 - Applied Mathematical Analysis 2
+	</div>
+	<div class="6u12u(small)">
+                 Fall 2014, 2015 
+	</div>
+<ul>
+  <li> Undergraduate course on partial differential equations </li>
+  <li> 19 students(Fall 2014), 24 students (Fall 2015) </li>
+</ul>
+</div>
+
+<br>
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                 MATH 320 - Linear Algebra and Differential equations
+	</div>
+	<div class="6u12u(small)">
+                 Fall 2013, Spring 2015
+	</div>
+<br>
+<ul>
+  <li> Undergraduate course covering linear algebra and differential equations </li>
+  <li> 185 students (Fall 2013), 250 students (Spring 2015) </li>
+  <li> Supervised and managed 3 teaching assistants </li>
+</ul>
+</div>
+
+<br>
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                 MATH 222 - Calculus and Analytic Geometry 2
+	</div>
+	<div class="6u12u(small)">
+                 Spring 2014
+	</div>
+<br>
+<ul>
+  <li> Second semester calculus </li>
+  <li> 224 students </li>
+  <li> Supervised and managed 5 teaching assistants </li>
+</ul>
+</div>
