Web CV updated w/ data science pedagogy workshop.

--- a/_experiences/outreach.html
+++ b/_experiences/outreach.html
@@ -6,6 +6,16 @@ order: 11
 
 <div class="row">
 	<div class="6u 12u$(small)">
+                  Data Science Pedagogy Winter Workshop
+	</div>
+	<div class="6u12u(small)">
+                 Winter 2020 - 2021
+	</div>
+</div>
+Co-organized workshop for educators of underrepresented/underserved students in data science.
+
+<div class="row">
+	<div class="6u 12u$(small)">
                   Harvard Summer Academic Program
 	</div>
 	<div class="6u12u(small)">
