Fixing typo on homepage (Be to Benard).

--- a/_sections/research.html
+++ b/_sections/research.html
@@ -10,8 +10,8 @@ order: 3
 <p style="text-align: left"> Multiscale phenomena are common in everyday life and engineering systems.  Fluid systems in particular exhibit multiple
 spatial and temporal scales.  The quintessential example of a multiscale phenomenon in fluid mechanics is turbulence --- the
 disordered, seemingly random, motion of a fast-moving fluid.  Much of my research in this area has focused on developing
-turbulence models for a variety of fluid systems including Rayleigh-B&eacute; convection and magnetohydrodynamics.  I have also
-found exact coherent structures in Rayleigh-B&eacute; convection that optimize heat transport and provide an upper bound on the
+turbulence models for a variety of fluid systems including Rayleigh-B&eacute;nard convection and magnetohydrodynamics.  I have also
+found exact coherent structures in Rayleigh-B&eacute;nard convection that optimize heat transport and provide an upper bound on the
 actual turbulent heat transport.  Ongoing research aims to find the signature of these optimal solutions in actual turbulent
 flows.  The emerging field of machine learning is a good candidate to search for such solutions.  An aim of my future
 research is to apply and extend these models to complex physical systems including geophysical flows (e.g.
