--- a/_sections/publications.html
+++ b/_sections/publications.html
@@ -34,8 +34,9 @@ P.Protopapas
 <h3> Journal Papers </h3>
 <ol reversed style="text-align: left">
    <li>
-      Coherent Solutions and Transition to Turbulence in Two-Dimensional Rayleigh-B&eacute;nard Convection, P. Kooloth, <b>D.Sondak</b>,
-   L.M.Smith, Physical Review Fluids: To appear, 2020 
+      Coherent Solutions and Transition to Turbulence in Two-Dimensional Rayleigh-B&eacute;nard Convection, P. Kooloth,
+<b>D.Sondak</b>, L.M.Smith, Physical Review Fluids, 6(1), 2021, doi: https://doi.org/10.1103/PhysRevFluids.6.013501;
+<b><i>Editors Suggestion</i></b>
    </li>
    <li>
     High Rayleigh number variational multiscale large eddy simulations of Rayleigh-B&eacute;nard Convection, <b>D.Sondak</b>, T.M.Smith,
