Including Constanza's thesis.

--- a/_experiences/theses.html
+++ b/_experiences/theses.html
@@ -33,3 +33,18 @@ order: 8
                  May 2020
 	</div>
 </div>
+
+<div class="row">
+	<div class="6u 12u$(small)">
+                  <b> Constanza V&aacute;squez </b> (co-advised at Universidad de Concepci&oacute;n)
+                  <br>
+                  Master's thesis
+                  <br>
+                  Deep Image Inpainting for Automatic Brain Tumor Extraction using Weak Labels
+                  <br>
+                  Next Position: PhD student
+	</div>
+	<div class="6u12u(small)">
+                 February 2021
+	</div>
+</div>
