More proper HTML &.

--- a/_experiences/theses.html
+++ b/_experiences/theses.html
@@ -42,7 +42,7 @@ order: 8
                   <br>
                   Machine Learning Approaches for Modeling Turbulent Channel Flow
                   <br>
-                  Next Position: PhD student at the Oden Institute for Computational Engineering & Sciences
+                  Next Position: PhD student at the Oden Institute for Computational Engineering &amp; Sciences
 	</div>
 	<div class="6u12u(small)">
                  May 2019
