Fixing DOI in PRF and changing editors to editors'

--- a/_sections/publications.html
+++ b/_sections/publications.html
@@ -35,8 +35,9 @@ P.Protopapas
 <ol reversed style="text-align: left">
    <li>
       Coherent Solutions and Transition to Turbulence in Two-Dimensional Rayleigh-B&eacute;nard Convection, P. Kooloth,
-<b>D.Sondak</b>, L.M.Smith, Physical Review Fluids, 6(1), 2021, doi: https://doi.org/10.1103/PhysRevFluids.6.013501;
-<b><i>Editors Suggestion</i></b>
+<b>D.Sondak</b>, L.M.Smith, Physical Review Fluids, 6(1), 2021, <a href=https://doi.org/10.1103/PhysRevFluids.6.013501>doi:
+https://doi.org/10.1103/PhysRevFluids.6.013501</a>;
+<b><i>Editors' Suggestion</i></b>
    </li>
    <li>
     High Rayleigh number variational multiscale large eddy simulations of Rayleigh-B&eacute;nard Convection, <b>D.Sondak</b>, T.M.Smith,
