--- a/_experiences/talks.html
+++ b/_experiences/talks.html
@@ -6,6 +6,9 @@ order: 5
 
 <ol reversed>
    <li>
+     An Autoencoder and Reduced Basis for Dynamical Systems, CUNY Harmonic Analysis and PDE's seminar, April 23, 2021
+   </li>
+   <li>
      Large Eddy Simulations of Rayleigh-B&eacute;nard Convection at High Ra, National Institute of Aerospace, Virtual
 Seminar, March 15, 2021
    </li>
