Updating with Hunter HCAM talk.

--- a/_experiences/talks.html
+++ b/_experiences/talks.html
@@ -5,6 +5,10 @@ order: 5
 ---
 
 <ol reversed>
+
+   <li>
+     Towards Bridging Machine Learning and Physics, Hunter College Applied Math seminar, May 6, 2021
+   </li>
    <li>
      An Autoencoder and Reduced Basis for Dynamical Systems, CUNY Harmonic Analysis and PDE's seminar, April 23, 2021
    </li>
