--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -9,7 +9,7 @@ order: 1
 <header>
   <h2 class="alt">David Sondak <br /></h2>
 <ul>
-  <i class="fa fa-envelope" title="Email"></i>&nbsp;&nbsp;<a href="mailto:dsondak@seas.harvard.edu">dsondak (at) seas.harvard.edu</a>
+  <i class="fa fa-envelope" title="Email"></i>&nbsp;&nbsp;<a href="mailto:dsondak@gmail.com">dsondak (at) gmail.com</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <i class="fab fa-github" title="GitHub"></i>&nbsp;&nbsp;<a href="https://github.com/dsondak">github.com/dsondak</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
