Catching up on publications-didn't rebuild site.

--- a/_experiences/publications.html
+++ b/_experiences/publications.html
@@ -7,38 +7,67 @@ order: 4
 <h3>  In Preparation </h3>
 <ol reversed>
 
+<!--
    <li>
       Learning a Reduced Basis of Dynamical Systems using an Autoencoder, <b>D.Sondak</b>, P.Protopapas, Submitted to
 Physical Review E, arXiv:2011.07346 
    </li>
-
+-->
+<!--
    <li>
     Physical Symmetries Embedded in Neural Networks, M. Mattheakis, P. Protopapas, D. Sondak, M. Di Giovanni,
    E. Kaxiras, arXiv:1904.08991, 2019
    </li>
-
+-->
+<!--
    <li>
     Convergence properties of neural networks for solving differential equations, M.DiGiovanni, D. Sondak, P.Protopapas,
 M.Mattheakis
    </li>
+-->
 
    <li>
     Solving differential equations using neural network solution bundles, C.Flamant, P.Protopapas, D. Sondak
    </li>
-
+<!--
    <li>
     Unsupervised learning of solution to differential equations with generative adversarial networks, D.Randle, P.Protopapas, D. Sondak
    </li>
-
+-->
+<!--
    <li>
     Uncertainty quantification of neural network-based Reynolds averaged Navier Stokes models, X.Zhou, D.Sondak, C.Garraffo,
 P.Protopapas
    </li>
-
+-->
 </ol>
 
 <h3> Journal Papers </h3>
 <ol reversed>
+   <li>
+     Auto-eD: A visual learning tool for automatic differentiation, L.Brown, R.Moon, <b>D. Sondak</b>Journal of Open Source Education, 53(5), 161, 2022, https://doi.org/10.21105/jose.00161
+   </li>
+   <li>
+     Hamiltonian neural networks for solving equations of motion, M.Mattheakis, <b>D. Sondak</b>, A.Dogra, 
+P.Protopapas, Physical Review E, 105(6), 065305, 2022, https://doi.org/10.1103/PhysRevE.105.065305
+   </li>
+   <li>
+     Hamiltonian neural networks for solving equations of motion, M.Mattheakis, <b>D. Sondak</b>, A.Dogra, 
+P.Protopapas, Physical Review E, 105(6), 065305, 2022, https://doi.org/10.1103/PhysRevE.105.065305
+   </li>
+   <li>
+	   DEQGAN: Learning the Loss Function for PINNs with Generative Adversarial Networks, B. Bullwinkel, D.Randle, P.Protopapas, <b>D.Sondak</b>, ICML 2022 2nd AI for Science Workshop
+   </li>
+   <li>
+	   Convolutional neural network models and interpretability for the anisotropic reynolds stress tensor in turbulent one-dimensional flows, H. Borde, <b>D.Sondak</b>, P.Protopapas, Journal of Turbulence, 23(1-2), 1-28, 2022, https://doi.org/10.1080/14685248.2021.1999459
+   </li>
+   <li>
+     Port-Hamiltonian neural networks for learning explicit time-dependent dynamical systems, S.A.Desai, M.Mattheakis, <b>D.Sondak</b>, P.Protopapas, Physical Review E 104(3), 034312, 2022, https://doi.org/10.1103/PhysRevE.104.034312
+   </li>   
+   <li>
+     Learning a reduced basis of dynamical systems using an autoencoder, <b>D. Sondak</b>,
+P.Protopapas, Physical Review E, 104(3), 2021, doi: https://doi.org/10.1103/PhysRevE.104.034202
+   </li>
    <li>
       Coherent Solutions and Transition to Turbulence in Two-Dimensional Rayleigh-B&eacute;nard Convection, P. Kooloth,
 <b>D.Sondak</b>, L.M.Smith, Physical Review Fluids, 6(1), 2021, doi: https://doi.org/10.1103/PhysRevFluids.6.013501;
